--- a/XRay/XRay.vcxproj.filters
+++ b/XRay/XRay.vcxproj.filters
@@ -131,5 +131,11 @@
     <ClInclude Include="Dependencies\imgui\stb_image.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="src\Scenes.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\AARect.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
