--- a/XRay/XRay.vcxproj
+++ b/XRay/XRay.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>MY_SOLUTIONDIR="$(SolutionDir)";STB_IMAGE_STATIC;GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui\backends;$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>MY_SOLUTIONDIR="$(SolutionDir)";STB_IMAGE_STATIC;GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui\backends;$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
