--- a/XRay/XRay.vcxproj
+++ b/XRay/XRay.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>MY_SOLUTIONDIR="$(SolutionDir)";STB_IMAGE_STATIC;GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\std_image;$(SolutionDir)\XRay\Dependencies\imgui\backends;$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>MY_SOLUTIONDIR="$(SolutionDir)";STB_IMAGE_STATIC;GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\std_image;$(SolutionDir)\XRay\Dependencies\imgui\backends;$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\XRay\Dependencies\imgui;$(SolutionDir)\XRay\Dependencies\GLFW\include;$(SolutionDir)\XRay\Dependencies\GLEW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -142,7 +142,6 @@
     <ClCompile Include="Dependencies\imgui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="Dependencies\imgui\imgui_tables.cpp" />
     <ClCompile Include="Dependencies\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="Dependencies\imgui\main.cpp" />
     <ClCompile Include="src\Core\Window.cpp" />
     <ClCompile Include="src\GUI\ImGuiRenderer.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -160,7 +159,6 @@
     <ClInclude Include="Dependencies\imgui\imstb_textedit.h" />
     <ClInclude Include="Dependencies\imgui\imstb_truetype.h" />
     <ClInclude Include="Dependencies\imgui\stb_image.h" />
-    <ClInclude Include="Dependencies\std_image\std_image.h" />
     <ClInclude Include="src\Core\Constants.h" />
     <ClInclude Include="src\Core\Util.h" />
     <ClInclude Include="src\Core\vec3.h" />
