--- a/XRay/XRay.vcxproj.filters
+++ b/XRay/XRay.vcxproj.filters
@@ -140,5 +140,14 @@
     <ClInclude Include="Dependencies\imgui\imgui_impl_win32.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="src\Renderer\Box.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\HittableList.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Renderer\Translate.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
