--- a/XRay/imgui.ini
+++ b/XRay/imgui.ini
@@ -21,22 +21,24 @@ Size=1280,720
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
+Pos=0,0
 Size=1600,900
 Collapsed=0
 
 [Window][Viewport]
-Pos=486,0
-Size=1114,900
+Pos=404,0
+Size=1196,900
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Settings]
-Size=484,900
+Pos=0,0
+Size=402,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Pos=190,172 Size=1600,900 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=484,480 Selected=0x54723243
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1114,480 CentralNode=1 Selected=0x13926F0B
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=28,428 Size=1600,900 Split=X Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=402,480 Selected=0x54723243
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1196,480 CentralNode=1 Selected=0x13926F0B
 
