--- a/XRay/imgui.ini
+++ b/XRay/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=657,608
+ViewportPos=216,859
 ViewportId=0x9F5F46A1
-Size=400,367
+Size=1124,189
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -17,8 +17,9 @@ Size=373,701
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1280,720
+Size=1600,224
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
@@ -26,19 +27,21 @@ Size=1600,900
 Collapsed=0
 
 [Window][Viewport]
-Pos=404,0
-Size=1196,900
+Pos=211,0
+Size=1389,900
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Settings]
 Pos=0,0
-Size=402,900
+Size=209,900
 Collapsed=0
 DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=28,428 Size=1600,900 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=402,480 Selected=0x54723243
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=1196,480 CentralNode=1 Selected=0x13926F0B
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,161 Size=1600,900 Split=Y Selected=0x13926F0B
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1600,224 Selected=0xB2A9529A
+  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1600,674 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=209,900 Selected=0x54723243
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1389,900 CentralNode=1 Selected=0x13926F0B
 
