--- a/XRay/imgui.ini
+++ b/XRay/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=216,859
+ViewportPos=271,564
 ViewportId=0x9F5F46A1
-Size=1124,189
+Size=1124,287
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -17,31 +17,47 @@ Size=373,701
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1600,224
+ViewportPos=190,172
+ViewportId=0x4647B76E
+Size=957,132
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1600,900
+Pos=0,19
+Size=1600,881
 Collapsed=0
 
 [Window][Viewport]
-Pos=211,0
-Size=1389,900
+Pos=294,19
+Size=1306,881
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Settings]
-Pos=0,0
-Size=209,900
+Size=323,900
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Objects]
+Pos=0,19
+Size=292,480
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Object]
+Pos=0,501
+Size=292,399
+Collapsed=0
+DockId=0x00000008,0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,161 Size=1600,900 Split=Y Selected=0x13926F0B
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=1600,224 Selected=0xB2A9529A
-  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1600,674 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=209,900 Selected=0x54723243
-    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1389,900 CentralNode=1 Selected=0x13926F0B
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=34,76 Size=1600,881 Split=X Selected=0x13926F0B
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=292,881 Split=Y Selected=0x967E7699
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=292,480 Selected=0x967E7699
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=292,399 Selected=0x4CBBA1F7
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1306,881 Split=Y
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1600,224 Selected=0xB2A9529A
+    DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=1600,674 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=323,900 Selected=0x54723243
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1275,900 CentralNode=1 Selected=0x13926F0B
 
